trying to fix 100vh issue on mobiles

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -3,6 +3,7 @@
     align-items: flex-start;
     position: relative;
     min-height: 100vh;
+    min-height: 100dvh;
     .calculate-box {
         margin: 2rem;
         margin: calc($header-height + 2rem) 2rem 2rem 2rem;
@@ -28,6 +29,7 @@
     }
     #Visual {
         height: calc(100vh - $header-height);
+        height: calc(100dvh - $header-height);
         border: 1px solid $text-color;
         position: sticky;
         top: $header-height;
